--- a/VRChat/07/1027707.html
+++ b/VRChat/07/1027707.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6fJZyFiF6VF/WE+xaC0QP+GPAoWTj37VIMcwpLH28hI="></script>
+    "wbG7uB7o0nwYY5jEDU9LkDhh9DpwgRXaB8Iq/Zunw5A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水棲種: アクエリア・ユニアV2【VRChat, VRM向けアバターモデル】","description":"遥か異世界の南国で見られる「アクエリア・ユニア」は、水辺に住まうレイメント（神秘性を有する知的生命体）です。\n人間に近い容姿でありながら魚類のようなヒレを持ちます。\n滅多に人前に姿を現しませんが、好奇心旺盛でコミュニケーションを好みます。\n\n「水棲レイメント」及び「アクエリア・ユニア」は種族・カテゴリ名です。\nあなたのアバターには、ぜひ独自の設定・名前をつけてあげてください。\n\n2018年にリリースしたモデル・服を、コンセプトを引き継いで「V2」としてリニューアル。まったく新しい「水棲ちゃん」に生まれ変わりました。\n","url":"https://booth.pm/ja/items/1027707","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/c0a72cc4-55c2-42d7-8acf-052eee064242/i/1027707/0f478457-cf8c-4128-b0f8-417371c4f0ab_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6fJZyFiF6VF/WE+xaC0QP+GPAoWTj37VIMcwpLH28hI="></script>
+    nonce="wbG7uB7o0nwYY5jEDU9LkDhh9DpwgRXaB8Iq/Zunw5A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1027707/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               607
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1027707/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               607
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
