--- a/VRChat/58/1028058.html
+++ b/VRChat/58/1028058.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O1zIOGfFHnlGfCaAPOpyujEQADlInS3XcRgtfeNBQcc="></script>
+    "soLIx41WXsHiqWM6/J8W8by7Dk1JNchabkllOrvX+Ws="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　「ひし形カットピアス」","description":"このピアス(イヤリング？)は主にVRChatでアバターに装着することを想定しています。\n\nポリゴン数は1個あたり376です。\n\nチェーンの長さが違う2種類のFBXが入っています。\n\nそれぞれに揺れもの用のボーンが入っているので、dynamicbone等の有償アセットを使用することで揺らすことができます。\n\nユニティパッケージになっています。\n\nチェーン、フレーム、宝石の部分がオブジェクト分けされているので。それぞれカラーと質感を分けることができます。\n","url":"https://booth.pm/ja/items/1028058","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1028058/8397d0e6-220b-47cc-88e9-64afc81ed6f7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O1zIOGfFHnlGfCaAPOpyujEQADlInS3XcRgtfeNBQcc="></script>
+    nonce="soLIx41WXsHiqWM6/J8W8by7Dk1JNchabkllOrvX+Ws="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1028058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               429
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1028058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               429
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
