--- a/VRChat/59/1027859.html
+++ b/VRChat/59/1027859.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YfMFvvgGDlC1WBNWwk6PKaJeFp6ZfVJMNQTItj65CFY="></script>
+    "Y3howU28OefN8Dfm6zpDunNOFnD0TXKfqzgsf5WuBxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DDD-002-S　ヘッドセット+バイザー　Ver1.1","description":"VRChat向けのヘッドセットを提供します\n　UTS2.0.4p3対応(同梱)\n　\nおまけ：30秒で作ったバイザー。　マテリアルも各自で適当なガラスシェーダーを当ててください。UV処理はしていないので何か書き込む際はFbxをいじってください。\nこちらはFBXがそのまま入っているのでUnityに放り込んでください。","url":"https://booth.pm/ja/items/1027859","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1027859/55d239a5-4725-4786-b023-02209e40543c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YfMFvvgGDlC1WBNWwk6PKaJeFp6ZfVJMNQTItj65CFY="></script>
+    nonce="Y3howU28OefN8Dfm6zpDunNOFnD0TXKfqzgsf5WuBxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1027859/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1027859/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
