--- a/VRChat/88/1027588.html
+++ b/VRChat/88/1027588.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "DkHLgcLXixU1dYbkqnm2YX+WNQ9aYGd/mFqeo0v+NO8="></script>
+    "8R+YJcP2WjlHKN2u8lTszoc1ysjcUgNoXWj2XpE459w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ワークキャップ 3Dモデル＜フォトグラメトリ＞","description":"・909△ポリゴン\n（アプリでの使用を想定してポリゴン数を落としてあります。）\n・VRChat等のアバターの小物としてどうぞ。\n・坪倉輝明モデルから剥ぎ取っただけのものなので、帽子の内側はメッシュがありませんので、両面描画シェーダーを使うなどしてください。\nhttps://tsubokulab.booth.pm/items/943414\n\n改変：可\n商用利用：可\n素材の再配布：不可\n\n[ クレジット ]\nモデル作成協力： SUPER SCAN STUDIO様","url":"https://booth.pm/ja/items/1027588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1027588/6b661cab-7242-4451-b971-f3f1d5144779_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DkHLgcLXixU1dYbkqnm2YX+WNQ9aYGd/mFqeo0v+NO8="></script>
+    nonce="8R+YJcP2WjlHKN2u8lTszoc1ysjcUgNoXWj2XpE459w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1027588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               419
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1027588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               419
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
