--- a/VRChat/99/1027499.html
+++ b/VRChat/99/1027499.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eLHW/3SQTEGCyXtaWvk0vo6ZGOebW5I4CummzjRuxEc="></script>
+    "swr2waUKrD4+iLGYJHfl5A4j6mJqsKcRMy8SqtJ0xdY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C's LCD Shader","description":"ディスプレイを視覚効果的に表現。\n透過画像、全体の透過値の調整、テクスチャのスクロールなど、多彩な調整項目！\n\nどんな物なのかYoutubeでチェックしよう！\nhttps://youtu.be/7mcNSVUPUvg\n\n◆VRChat向けの商品ですが、その他の用途ではサポート外となります。\n◆Unity 2017想定\n◆改変可能\n◆商用利用の場合は、必ず著作権者を明示してください。\n\n◆ライセンス\nコンテンツは著作権で保護されています。\nコンテンツを使用することにより、以下の条件に同意するものとします。\n\n1.コンテンツをそのまま許可なく第三者へ販売、配布の禁止。\n　著作者の利益を損なう場合を除き、コンテンツが音声や動画、ソフトウェアや機械、あるいは演劇等の作品に組み込まれる場合はこの限りではない。\n\n2.商用利用では個人、法人を問わず、必ず解釈できるように著作者がClomaであることを明示すること。\n\n3.コンテンツを改変した物についても、当ライセンスを継承すること。\n\n規約は予告なしに変更されることがあります。","url":"https://booth.pm/ja/items/1027499","offers":{"priceCurrency":"JPY","@type":"Offer","price":"340"},"image":"https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1027499/840bb264-05e4-451f-ae95-1c901bd6ec59_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eLHW/3SQTEGCyXtaWvk0vo6ZGOebW5I4CummzjRuxEc="></script>
+    nonce="swr2waUKrD4+iLGYJHfl5A4j6mJqsKcRMy8SqtJ0xdY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -196,7 +196,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1027499/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -211,14 +211,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1027499/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
