--- a/VRChat/94/1027494.html
+++ b/VRChat/94/1027494.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GIV4oRqqvAAqwlj8LiYv64ujo/l19HgmjF7Q1MyMm0g="></script>
+    "Di9GNjsy8RJU8Jg2lS/HOnV/jHKuffY+tuFV2oijkSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うんこ","description":"うんこです。\nFBX形式、ポリ数は744です。\nそのままやデータを取り出せる形式での再配布、再販以外は自由にしてください。","url":"https://booth.pm/ja/items/1027494","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/65a07bda-dcd9-4c17-bb24-23ec1ab4f9db/i/1027494/9e8c0d90-f341-477b-910b-b116045ebee3_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GIV4oRqqvAAqwlj8LiYv64ujo/l19HgmjF7Q1MyMm0g="></script>
+    nonce="Di9GNjsy8RJU8Jg2lS/HOnV/jHKuffY+tuFV2oijkSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1027494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1027494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
