--- a/VRChat/56/1026956.html
+++ b/VRChat/56/1026956.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ja3fM87vtDsyh1nQWxfIQTIS2aCb0o/xfCdii1KlMQs="></script>
+    "1eNs7lePHHuZ381GrbjQrGwiKSvSbjSNq/UL3DRECac="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『キッシュ』用素体","description":"##モデル説明##\n\nオリジナル3Dモデル『キッシュ用素体』\n※素体のみのデータです。髪、顔は付属しません。\n--------------------------------------------------\n\n#内容物\n・n_body.fbx\n　キッシュ用の素体データです。\n・n_body.png\n　素体のテクスチャです。\n・n_body_1.png\n　素体のインナー付きテクスチャです。\n・n_body.psd\n　素体のpsdデータです。グラデーションマップを使用しています。\n\n#ボーンについて\nUnityのHumanoidの規則に沿った作りになっています。\n\n#VRChatのフルトラッキングについて\nキッシュ同様フルトラッキングに対応しています。\n\n#素体の用途について\n部分的に使用して服を着せたり、キッシュ用の服を作る際のベースとして使用してください。\n他の服モデルと組み合わせる際は規約的に問題ないかを確認の上改造を行ってください。\n\n#素体から改造したモデルの販売について\n規約変更を行い、有料であることといくつかの条件で改造モデルの販売を認める事としました。\n規約の補足としては、\"変更のない状態で50％\"とはテクスチャであれば範囲、ポリゴンであれば形状とポリゴン数の事を表しています。\nUVの頂点を移動したり、ポリゴンを押し出しや移動をした場合は変更があった扱いになります。\nあくまでも素体をほとんどそのままの状態で販売してほしくないと思ったので設定した規約です。\n厳密に調べたりはしないと思いますので目安として考えてください。\n販売物に関してはキッシュちゃん対応モデルとして販売してもらえるのであれば、他のアバターに使用できるようにしても構いません。\nまた、キッシュ用素体を使用し、ワンオフ衣装の受注等を行うことも許可します。\nそれと良ければ販売の際にboothの商品のタグにキッシュちゃん対応と付けて頂けると助かります。\n\n--------------------------------------------------\n更新情報\n18/09/26 1.00：リリース\n19/12/06 1.01：テクスチャのミラーが出来ていなかった部分の修正、利用規約変更\n21/03/30 1.02：ノーマルマップ追加、PSDに首影追加、白インナー追加\n21/11/11 1.03：フルトラッキング精度向上の為に肩、肘のボーンを調整。","url":"https://booth.pm/ja/items/1026956","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1026956/713e292c-3718-4188-9001-ea078ff243f4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ja3fM87vtDsyh1nQWxfIQTIS2aCb0o/xfCdii1KlMQs="></script>
+    nonce="1eNs7lePHHuZ381GrbjQrGwiKSvSbjSNq/UL3DRECac="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1026956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              2115
+                              2116
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1026956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              2115
+                              2116
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
