--- a/VRChat/79/1024579.html
+++ b/VRChat/79/1024579.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9pnQd0JArpWBkqsc08erWavYeJmx57iUowu8Id3QEkE="></script>
+    "mHizC/Np0umhZhRwaO/DltAtq3ssK6AQnX2FVOg1Yx4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ダイナミックボーン一括設定するやつ","description":"ダイナミックボーンの一括設定ができるスクリプトです。\n\n同じオブジェクトにアタッチされたダイナミックボーンスクリプトの値を一括で変更できます。","url":"https://booth.pm/ja/items/1024579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"}}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9pnQd0JArpWBkqsc08erWavYeJmx57iUowu8Id3QEkE="></script>
+    nonce="mHizC/Np0umhZhRwaO/DltAtq3ssK6AQnX2FVOg1Yx4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               157
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               157
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
